--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "what-to-eat-today",
+  "homepage": "https://zoudingyi.github.io/what-to-eat-today",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-luck-draw": "^3.4.11"
